--- a/share/app/src/main/res/values/strings.xml
+++ b/share/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="store_select_pay">选择打赏方式</string>
     <string name="string_money">元</string>
     <string name="string_copy">复制</string>
+    <string name="string_collection">收藏</string>
     <string name="send_red_packet_amount_unit">元</string>
     <string name="modify_amount">修改金额</string>
     <string name="to_pay">塞钱</string>
@@ -20,6 +21,7 @@
     <string name="string_joke_img">趣图</string>
     <string name="string_joke_text">趣事</string>
     <string name="string_reward">赏一下</string>
+    <string name="string_empty_collection">你还没有收藏哦</string>
 
 
     <string name="error_network_failed">您的网络不太给力哦</string>
@@ -68,4 +70,5 @@
     <string name="time_format_elapsed_just">刚刚</string>
     <string name="time_format_splice_hour">%1$d小时</string>
     <string name="time_format_splice_minute">%1$d分钟</string>
+    <string name="exitapp">再次点击返回退出应用</string>
 </resources>
